// Manually populated
Table frc_seasons {
  year smallint [not null]
  name text [not null]

  indexes {
    year [pk]
  }
}

Table frc_districts {
  season smallint [not null]
  key citext [not null]
  code citext [not null]
  name text [not null]

  indexes {
    key [pk]
    (season, code) [unique]
  }
}
Ref: frc_districts.season > frc_seasons.year [delete: cascade]

Table frc_teams {
  number smallint [not null]
  rookie_season smallint
  name text [not null]

  country text
  province text
  city text
  postal_code text
  website text

  indexes {
    number [pk]
    // name (gin, pg_trgm)
    // (number::text) (gin, pg_trgm)
  }
}
Ref: frc_teams.rookie_season > frc_seasons.year [delete: restrict]
